tests/idris2/error/perror025/DataWhere.idr
data Foo : Type
  Bar : Stnrig -> Foo
